--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -141,11 +141,19 @@ td.errors textarea {
     border: 1px solid red;
 }
 
+td.queryHeader {
+    border-left: 10px solid skyblue;
+    border-bottom: 1px solid skyblue;
+    text-align: left;
+    font-family: cursive;
+    font-size: 16px;
+    width: 50px;
+}
 /* TABLES */
 
 table {
-    border: 1px solid #ccc;
-    width: 100%
+    border: 0px solid #ccc;
+    width: 95%;
 }
 tr {
     border: 0;
